--- a/.gitignore
+++ b/.gitignore
@@ -152,12 +152,10 @@ typings/
 
 
 ### VisualStudioCode template
-.vscode/*
-!.vscode/settings.json
-!.vscode/tasks.json
-!.vscode/launch.json
-!.vscode/extensions.json
-
+.vscode
+.settings.json
+.envs
+.mypy_cache
 
 
 
